--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -18,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
     "react-tsparticles": "^2.10.1",
+    "react-type-animation": "^3.1.0",
     "sort-by": "^1.2.0",
     "tsparticles": "^2.10.1"
   },
