--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "bootstrap": "^5.3.0",
+    "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
