--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.8.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.0",
     "react-tilt": "^1.0.2",
     "react-tsparticles": "^2.10.1",
